--- a/uikit.html
+++ b/uikit.html
@@ -20,21 +20,19 @@
         <div class="block">
             <div>
                 <button class="button button_size-big button_color-blue">
-                    <svg class="button__icon_size-small button__icon_color-white" viewBox="0 0 16 16"
-                        xmlns="http://www.w3.org/2000/svg">
+                    <svg class="button__icon_size-small" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M8 15C12.0269 15 15.5 11.5021 15 7.5C14.7688 10.0468 12.6071 12 10 12C7.23858 12 5 9.76142 5 7C5
                 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
                             stroke="none" />
                     </svg>
-                    <span class="button__text button__text_color-white">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_size-big button_color-blue">
-                    <span class="button__text button__text_color-white">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_area-big button_color-blue">
-                    <svg class="button__icon_size-small button__icon_color-white" viewBox="0 0 16 16"
-                        xmlns="http://www.w3.org/2000/svg">
+                    <svg class="button__icon_size-small" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M8 15C12.0269 15 15.5 11.5021 15 7.5C14.7688 10.0468 12.6071 12 10 12C7.23858 12 5 9.76142 5 7C5
                 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
@@ -44,21 +42,19 @@
             </div>
             <div>
                 <button class="button button_size-small button_color-blue">
-                    <svg class="button__icon_size-small button__icon_color-white" viewBox="0 0 16 16"
-                        xmlns="http://www.w3.org/2000/svg">
+                    <svg class="button__icon_size-small" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M8 15C12.0269 15 15.5 11.5021 15 7.5C14.7688 10.0468 12.6071 12 10 12C7.23858 12 5 9.76142 5 7C5
                 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
                             stroke="none" />
                     </svg>
-                    <span class="button__text button__text_color-white">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
-                <button class="button button_size-small button_color-blue ">
-                    <span class="button__text button__text_color-white">Text here</span>
+                <button class="button button_size-small button_color-blue">
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_area-small button_color-blue">
-                    <svg class="button__icon_size-small button__icon_color-white" viewBox="0 0 16 16"
-                        xmlns="http://www.w3.org/2000/svg">
+                    <svg class="button__icon_size-small" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M8 15C12.0269 15 15.5 11.5021 15 7.5C14.7688 10.0468 12.6071 12 10 12C7.23858 12 5 9.76142 5 7C5
                 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
@@ -77,10 +73,10 @@
                 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
                             stroke="none" />
                     </svg>
-                    <span class="button__text button__text_color-blue">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_size-big button_color-white">
-                    <span class="button__text button__text_color-blue">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_area-big button_color-white">
                     <svg class="button__icon_size-small button__icon_color-blue" viewBox="0 0 16 16"
@@ -101,10 +97,10 @@
                 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
                             stroke="none" />
                     </svg>
-                    <span class="button__text button__text_color-blue">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_size-small button_color-white">
-                    <span class="button__text button__text_color-blue">Text here</span>
+                    <span class="button__text">Text here</span>
                 </button>
                 <button class="button button_area-small button_color-white">
                     <svg class="button__icon_size-small button__icon_color-blue" viewBox="0 0 16 16"
@@ -119,7 +115,7 @@
         </div>
         <div class="gap-small">
             <div>
-                <button class="button button_size-big button_color-white">
+                <button class="button button_size-big button_color-black">
                     <svg class="button__icon_size-small" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M8 15C12.0269 15 15.5 11.5021 15 7.5C14.7688 10.0468 12.6071 12 10 12C7.23858 12 5 9.76142 5 7C5
@@ -128,10 +124,10 @@
                     </svg>
                     <span class="button__text">Text here</span>
                 </button>
-                <button class="button button_size-big button_color-white">
+                <button class="button button_size-big button_color-black">
                     <span class="button__text">Text here</span>
                 </button>
-                <button class="button button_area-big button_color-white">
+                <button class="button button_area-big button_color-black">
                     <svg class="button__icon_size-small" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M8 15C12.0269 15 15.5 11.5021 15 7.5C14.7688 10.0468 12.6071 12 10 12C7.23858 12 5 9.76142 5 7C5
@@ -143,17 +139,17 @@
         </div>
     </div>
 
-    <div class="input-box">
-        <div>
+    <div class="input-wrapper">
+        <div class="input-box">
             <label>
                 <div class="input-box__text">Дата и время заказа</div>
-                <input class="input-box__text input-box__item input-box__item_empty" type="text" placeholder="Введите">
+                <input class="input-box__item input-box__item_empty" type="text" placeholder="Введите">
             </label>
         </div>
-        <div class="input-box__icon-position">
+        <div class="input-box">
             <label>
                 <div class="input-box__text">Дата и время заказа</div>
-                <input class="input-box__text input-box__item input-box__item_incorrect" type="text" value="06.12.2021">
+                <input class="input-box__item input-box__item_incorrect" type="text" value="06.12.2021">
             </label>
             <button class="input-box__button input-box__button_color-white">
                 <div>
@@ -164,10 +160,10 @@
                 </div>
             </button>
         </div>
-        <div class="input-box__icon-position">
+        <div class="input-box">
             <label>
                 <div class="input-box__text">Дата и время заказа</div>
-                <input class="input-box__text input-box__item input-box__item_disabled" type="text" readonly
+                <input class="input-box__item input-box__item_disabled" type="text" readonly
                     value="06.12.2021">
             </label>
             <div class="input-box__icon input-box__icon_color-light-blue">
@@ -222,93 +218,93 @@
     </form>
 
     <div class="dropdown-wrapper">
-        <div class="dropdown dropdown__item dropdown__item_first-size">
+        <div class="dropdown dropdown__item block-size-big">
             <label class="dropdown__label dropdown__label_size-small">
                 <div class="checkbox">
                     <input class="checkbox__area" type="checkbox">
-                    <span class="dropdown__text dropdown__text_area-first">Новый</span>
+                    <span class="dropdown__text dropdown__text_area-small">Новый</span>
                 </div>
             </label>
             <label class="dropdown__label dropdown__label_size-small">
                 <div class="checkbox">
                     <input class="checkbox__area" type="checkbox">
-                    <span class="dropdown__text dropdown__text_area-first">Расчет</span>
+                    <span class="dropdown__text dropdown__text_area-small">Расчет</span>
                 </div>
             </label>
             <label class="dropdown__label dropdown__label_size-small">
                 <div class="checkbox">
                     <input class="checkbox__area" type="checkbox" checked>
-                    <span class="dropdown__text dropdown__text_area-first">Подтвержден</span>
+                    <span class="dropdown__text dropdown__text_area-small">Подтвержден</span>
                 </div>
             </label>
             <label class="dropdown__label dropdown__label_size-small">
                 <div class="checkbox">
                     <input class="checkbox__area" type="checkbox">
-                    <span class="dropdown__text dropdown__text_area-first">Отложен</span>
+                    <span class="dropdown__text dropdown__text_area-small">Отложен</span>
                 </div>
             </label>
             <label class="dropdown__label dropdown__label_size-small">
                 <div class="checkbox">
                     <input class="checkbox__area" type="checkbox">
-                    <span class="dropdown__text dropdown__text_area-first">Выполнен</span>
+                    <span class="dropdown__text dropdown__text_area-small">Выполнен</span>
                 </div>
             </label>
             <label class="dropdown__label dropdown__label_size-small">
                 <div class="checkbox">
                     <input class="checkbox__area" type="checkbox">
-                    <span class="dropdown__text dropdown__text_area-first">Отменен</span>
+                    <span class="dropdown__text dropdown__text_area-small">Отменен</span>
                 </div>
             </label>
         </div>
-        <div class="dropdown dropdown__item dropdown__item_second-size">
+        <div class="dropdown dropdown__item block-size-big">
             <label class="dropdown__label">
                 <input class="radio-button radio-button_invisible" type="radio" name="input">
-                <span class="dropdown__text dropdown__text_area-second">Новый</span>
+                <span class="dropdown__text dropdown__text_area-middle">Новый</span>
             </label>
             <label class="dropdown__label">
                 <input class="radio-button radio-button_invisible" type="radio" name="input">
-                <span class="dropdown__text dropdown__text_area-second">Расчет</span>
+                <span class="dropdown__text dropdown__text_area-middle">Расчет</span>
             </label>
             <label class="dropdown__label">
                 <input class="radio-button radio-button_invisible" type="radio" name="input" checked>
-                <span class="dropdown__text dropdown__text_area-second">Подтвержден</span>
+                <span class="dropdown__text dropdown__text_area-middle">Подтвержден</span>
             </label>
             <label class="dropdown__label">
                 <input class="radio-button radio-button_invisible" type="radio" name="input">
-                <span class="dropdown__text dropdown__text_area-second">Отложен</span>
+                <span class="dropdown__text dropdown__text_area-middle">Отложен</span>
             </label>
             <label class="dropdown__label">
                 <input class="radio-button radio-button_invisible" type="radio" name="input">
-                <span class="dropdown__text dropdown__text_area-second">Выполнен</span>
+                <span class="dropdown__text dropdown__text_area-middle">Выполнен</span>
             </label>
             <label class="dropdown__label">
                 <input class="radio-button radio-button_invisible" type="radio" name="input">
-                <span class="dropdown__text dropdown__text_area-second">Отменен</span>
+                <span class="dropdown__text dropdown__text_area-middle">Отменен</span>
             </label>
         </div>
-        <div class="dropdown dropdown__item_third-size">
-            <div class="dropdown__display-column">
+        <div class="dropdown block-size-middle">
+            <div class="dropdown__text_area-big">
                 <label>
-                    <div class="dropdown__text dropdown__text_area-third">Номер страницы</div>
-                    <input class="input-border input-box__item_empty" type="text" placeholder="Введите">
+                    <div class="input-box__text">Номер страницы</div>
+                    <input class="input-box__item input-box__item_empty" type="text" placeholder="Введите номер">
                 </label>
             </div>
         </div>
-        <div class="dropdown dropdown__item_fourth-size">
+        <div class="dropdown block-size-small">
             <div>
-                <div class="dropdown__text dropdown__text_area-third">Удалить n записей?</div>
-                <button class="dropdown__button button_color-white">
-                    <span class="dropdown__text button__text_color-blue">Удалить</span>
+                <div class="dropdown__text dropdown__text_area-big">Удалить n записей?</div>
+                <button class="button button_size-small button_color-white">
+                    <span class="button__text">Удалить</span>
                 </button>
-                <button class="dropdown__button button_color-blue">
-                    <span class="dropdown__text button__text_color-white">Отмена</span>
+                <button class="button button_size-small button_color-blue">
+                    <span class="button__text">Отмена</span>
                 </button>
             </div>
         </div>
-        <div class="dropdown dropdown__item_fifth-size">
+        <div class="dropdown block-size-small">
             <div>
-                <div class="dropdown__text dropdown__text_area-third">Выберите тему</div>
-                <button class="dropdown__button button_color-white">
+                <div class="dropdown__text dropdown__text_area-big">Выберите тему</div>
+                <button class="button button_size-small button_color-white">
                     <svg class="button__icon_size-small" fill="#459DF5" viewBox="0 0 16 16"
                         xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="4" stroke="none" />
@@ -321,9 +317,9 @@
                         <path d="M3.5 14H2L2 12.5L3.5 11L5 12.5L3.5 14Z" stroke="none" />
                         <path d="M14 3.5V2L12.5 2L11 3.5L12.5 5L14 3.5Z" stroke="none" />
                     </svg>
-                    <span class="button__text button__text_color-blue">Светлая</span>
+                    <span class="button__text">Светлая</span>
                 </button>
-                <button class="dropdown__button button_color-blue">
+                <button class="button button_size-small button_color-blue">
                     <svg class="button__icon_size-small" fill="#FFFFFF" viewBox="0 0 16 16"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -331,7 +327,7 @@
                     5 7C5 4.23858 7.23858 2 10 2C11 2 12 2.5 12 2.5C11 1.5 10 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15Z"
                             stroke="none" />
                     </svg>
-                    <span class="button__text button__text_color-white">Темная</span>
+                    <span class="button__text">Темная</span>
                 </button>
             </div>
         </div>
